[package]
name = "modernbert"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-nn = "0.8.4"
candle-core = "0.8.4"
#candle-flash-attn = "0.8.4"
candle-transformers = "0.8.4"
hf-hub = "0.4.2"
anyhow = "1.0.97"
tokenizers = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.140"
safetensors = "~0.4.5"
clap = { version = "4.5.32", features = ["derive"] }

